2012-01-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Added support for Desktop Notification.
	* constants.py: Added constants class.
	* nullobject.py: Added null object class.
	* twitter/api.py: Added support for Search API.

2012-01-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py: Added support for feedlist store drag & drop.

2012-01-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/*, share/feedsource.glade: Added feed source
	  dialogs for feeds configuration.

2012-01-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/api.py: Added support for reconnecting lost feed
	  streaming.

2012-01-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* assistant_twitter.py, twitterauthorize.py, assistant_twitter.glade:
	  Added an assistant for twitter authorization.
	* settings.py, com.googlecode.gfeedline.gschema.xml.in: Added GSettings.
	* preferences.py, preferences.glade: Added preferences.

2012-01-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* scrollsmoothly.js: Added support for smooth scrolling.

2012-01-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gfeedline.py: Added support for Streaming.  Added ListStore for
	  Feed Sources.
	* usercolor.py: Added support for user colors.

2012-01-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gfeedline.glade: Added Notebook UI.

2012-01-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gfeedline.py: New project
